tests/baselines/reference/parserMemberAccessorDeclaration10.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration10.ts (2 errors) ====
    class C {
        export get Foo() { }
        ~~~~~~
!!! parserMemberAccessorDeclaration10.ts(2,5): error TS1031: 'export' modifier cannot appear on a class element.
                   ~~~
!!! parserMemberAccessorDeclaration10.ts(2,16): error TS2126: Getters must return a value.
    }